# gencrud

./: .gitignore  CHANGES.md  LICENSE.md  MANIFEST.in  README.md  RELEASE.md  TODO.md  USAGE.md  __init__.py  angular.py  api.py  app.py  applogger.py  autoapp.py  build.cmd  build.sh  commands.py  config.py  config.yaml  database.py  gencrud.py  incr_version.py  install.cmd  install.sh  main.py  out.txt  pep8.conf  requirements.txt  schema_test.py  screens.yaml  setup.cfg  setup.py  stompmq.py  test.py  testdata.sql  version.py
commands/: clean.py  dba.py  lint.py  misc.py  register.py  rundev.py  runprod.py  runssl.py  schema.py  serve.py  test.py  urls.py
common/: __init__.py  angular.py  apiclass.py  compat.py  convert.py  crud.py  crudmixin.py  dbmem.py  exceptions.py  iterahead.py  jsonenc.py  log.py  logger.py  logjson.py  lookahead.py  parameters.py  plugins.py  tablemngt.py  tdict.py  util.py
doc/: MANUAL.md
enstensions/: bscrypt.py  cache.py  cors.py  database.py  extensions.py  flask.py  jwt.py  marshmallow.py  migrate.py
examples/: role-table.yaml  screens-base.yaml  screens.yaml  test-table.yaml  user-table-v2.yaml  user-table.yaml  virtual-table.yaml
extensions/: bcrypt.py  cache.py  config.py  cors.py  database.py  flask.py  jwt.py  marshmallow.py  migrate.py  mondash.py  register.py  stompmq.py  tracking.py  websocket.py
gencrud/: __main__.py  _schema.yaml  configuraton.py  constants.py  gencrud.py  generator.py  installer.py  myyaml.py  schema.py  schema.yaml  source.py  version.py
old/: delete.dialog.html.templ
pytemplate/: __main__.py  (+18 more)
(+566 files in other folders)
