[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt

[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support. Removing this line (or setting universal to 0) will prevent
# bdist_wheel from trying to make a universal wheel. For more see:
# https://packaging.python.org/guides/distributing-packages-using-setuptools/#wheels
universal=0

[pycodestyle]
count = False
ignore = E124,E126,E127,E128,E131,E201,E202,E221,E241,E251,E271,E272,W291,N802,W504,W505
max-line-length = 160
statistics = True
filename = *.py
exclude = ./web, ./cert, ./requirements, ./build, ./dist, ./doc, ./examples, ./output
format = pylint